--- a/toolbox.css
+++ b/toolbox.css
@@ -1,5 +1,3 @@
-
-
 .toolbox {
 	z-index: 1;
 	position: fixed;
@@ -8,18 +6,14 @@
 	right: 2%;
 	font-size: 3rem;
 
-	pointer-events: none;
-}
-
-.toolbox * {
-	pointer-events: auto;;
+	height: 100%;
 }
 
 .toolbox-handle {
 	display: flex;
 	align-items: flex-end;
 	gap: 1.5rem;
-	height: 50dvh;
+	max-height: max-content;
 }
 
 .toolbox-handle-button {
@@ -55,7 +49,7 @@
 }
 
 
-.toolbox-tools-closed .toolbox-tools-btn.toolbox-tools-open-btn {
+.toolbox-handle-open .toolbox-tools-closed .toolbox-tools-btn.toolbox-tools-open-btn {
 	visibility: visible;
 	display: block;
 }
