--- a/widgets.css
+++ b/widgets.css
@@ -6,10 +6,6 @@
 	width: fit-content;
 }
 
-#osd-element .r6o-editor-inner {
-
-}
-
 .r6o-editor-inner > .widget {
 	width: fit-content;
 }
@@ -26,7 +22,7 @@
 .annotation-widget-verse {
 	background-color: rgb(240 240 240);
 	display: flex;
-	flex-flow: row wrap;
+	flex-flow: row nowrap;
 	width: 100%;
 	gap: 2rem;
 	padding: 1rem;
