--- a/widgets.css
+++ b/widgets.css
@@ -10,6 +10,17 @@
 	width: fit-content;
 }
 
+/* because of internal a9s css rules, there is no way around the !import decl */
+.a9s-handle-inner {
+	fill: transparent !important;
+	stroke: transparent !important;
+}
+
+.a9s-handle-outer {
+	fill: rgb(144 38 67 / 0.15) !important;
+	stroke: rgb(255 245 250 / 0.8) !important;
+}
+
 .annotation-widget-container {
 	display: flex;
 	padding: 1rem;
