--- a/widgets.css
+++ b/widgets.css
@@ -1,3 +1,24 @@
+.citation-view-container {
+    position:absolute;
+    top: 0;
+    left: 0;
+
+    border-radius:1%;
+    
+    background: rgba(200, 175, 190, 0.85);
+    box-shadow: 1.5px 0.5px 2px 1px rgb(0 0 0 / 10%);
+}
+
+.citation-view-container .citation-view-verse{
+    font: 0.9rem "Garamond";
+    display: flex;
+    padding:1rem;
+    gap:1rem;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 #osd-element .a9s-inner {
 	fill: rgb(12 40 200 / 0.1);
 }
@@ -39,7 +60,7 @@
 	padding: 1rem;
 }
 
-/*
+
 .annotation-widget-verse br {
 	counter-increment: line;
 }
@@ -49,7 +70,7 @@
 	padding-right: .5rem;
 	background: rgb(220 220 220 / 0.4);
 }
-*/
+
 
 .cite-widget-container {
 	display: flex;
