--- a/widgets.css
+++ b/widgets.css
@@ -5,7 +5,7 @@
     
     background: rgba(200, 175, 190, 0.85);
     box-shadow: 1.5px 0.5px 2px 1px rgb(0 0 0 / 10%);
-    max-width: 30vw;
+    /*max-width: 30vw;*/
 }
 
 .citation-view-container .citation-view-verse{
