--- a/styles.css
+++ b/styles.css
@@ -190,32 +190,35 @@ i {
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 .drawer-contents {
-scrollbar-width: auto;
-scrollbar-color: #000000 rgb(0 0 0 / 0.0);
+    scrollbar-width: auto;
+    scrollbar-color: #000000 rgb(0 0 0 / 0.0);
 }
 
 /*drawer-contents Chrome, Edge, and Safari */
 .drawer-contents::-webkit-scrollbar {
-width: 20px;
+    width: 12px;
 }
 
 .drawer-contents::-webkit-scrollbar-track {
-background: rgb(0 0 0 / 0.0);
+    background: rgb(0 0 0 / 0.0);
 }
 
 .drawer-contents::-webkit-scrollbar-corner {
-background: rgb(0 0 0 / 0.0);
+    background: rgb(0 0 0 / 0.0);
 }
 
 .drawer-contents::-webkit-scrollbar-thumb {
-background-color: #000000;
-border-radius: 10px;
-border: 4px solid #000000;
+    background-color: #000000;
+    border-radius: 10px;
+    border: 4px solid #000000;
 }
 
 .drawer-books .drawer-contents {
     font-size: 1.25rem;
 
+    width: fit-content;
+    max-width: 40dvw;
+    /*max-width: min(;*/
     /* flow must be switched for writing mode*/
     flex-flow: row wrap;
     writing-mode: vertical-lr;
@@ -248,6 +251,7 @@ border: 4px solid #000000;
     margin: .1rem 0.5rem;
 
     cursor: pointer;
+    max-height: 7rem;
     padding: .4rem 1rem;
     text-align: center;
     vertical-align: middle;
