--- a/widgets.css
+++ b/widgets.css
@@ -13,7 +13,7 @@
     display: flex;
     padding:1rem;
     gap:1rem;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
 }
